--- a/chemodan__shop/css/style.css
+++ b/chemodan__shop/css/style.css
@@ -1973,6 +1973,33 @@ h3 {
 .product__compare_active i {
   background-image: url(../img/icon_compare_ok.svg);
 }
+.product__stats {
+  width: 38px;
+  height: 25px;
+  border-radius: 2px;
+  /*background: #e8e8e8;*/
+  position: absolute;
+  top: 5px;
+  right: 48px;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product__stats i {
+  width: 20px;
+  height: 22px;
+  background: url(../img/icon_comprasion.svg) center center no-repeat;
+  background-size: 100%;
+  transition: 0.2s ease-in-out;
+  filter: brightness(90%) grayscale(100%);
+}
+.product__stats i:hover {
+  filter: none;
+}
+.product__stats_active i {
+  background-image: url(../img/icon_comprasion_ok.svg);
+}
 .product__favorite {
   width: 38px;
   height: 25px;
@@ -2788,6 +2815,7 @@ h3 {
   padding: 10px;
   color: #1c1c1c;
   font: 300 14px "Roboto",sans-serif;
+  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 .goodreview__textarea textarea::placeholder {
   color: #a4a4a4;
@@ -2812,6 +2840,7 @@ h3 {
   border-radius: 5px;
   border: 1px solid #e5e5e5;
   padding: 0 10px;
+  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 .goodreview__input::placeholder {
   color: #a4a4a4;
@@ -2913,11 +2942,27 @@ h3 {
   align-items: center;
   margin-bottom: 15px;
 }
+.cardgood__tabs .filtertab:hover {
+  color: #3498db;
+  border-color: #3498db;
+}
+.cardgood__tabs .filtertab_active {
+  background: #3498db;
+  border-color: #3498db;
+  color: #fff;
+}
+.cardgood__tabs .filtertab_active:hover {
+  color: #fff;
+}
 .cardgood__slider {
   width: 305px;
   /*background: #f6f6f6;*/
   position: relative;
   text-align: center;
+  align-self: flex-end;
+}
+.cardgood__info {
+  padding-bottom: 3px;
 }
 .cardgood__adv {
   width: 250px;
@@ -2927,10 +2972,45 @@ h3 {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.18);
 }
 .cardgood__title {
   font: 400 25px "Roboto",sans-serif;
   color: #1c1c1c;
+}
+.cardgood__rating {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 0;
+}
+.cardgood__stars {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.cardgood__stars i {
+  display: flex;
+  width: 11px;
+  height: 10px;
+  background: url(../img/star-full.png) center center no-repeat;
+  background-size: 100%;
+}
+.cardgood__stars i:last-child {
+  background: url(../img/star-half.png) center center no-repeat;
+  background-size: 100%;
+}
+.cardgood__stars span {
+  font: 500 14px "Roboto",sans-serif;
+  color: #1c1c1c;
+  display: inline-block;
+  margin-left: 8px;
+}
+.cardgood__vote {
+  font: 400 14px "Roboto",sans-serif;
+  color: #a4a4a4;
+  display: inline-block;
+  margin-left: 18px;
 }
 .cardgood__subtitle {
   font: 400 14px "Roboto",sans-serif;
@@ -2944,8 +3024,16 @@ h3 {
   display: flex;
   justify-content: space-between;
   position: relative;
-  overflow: hidden;
+  /*overflow: hidden;*/
   padding: 1px 0;
+}
+.cardgood ul li:before {
+  content: '\2022';
+  font-size: 13px;
+  color: #000;
+  position: absolute;
+  left: -16px;
+  top: 2px;
 }
 .cardgood ul li:after {
   content: '';
@@ -2991,6 +3079,7 @@ h3 {
   background: #fff;
   border: 1px solid #e7e7e7;
   padding: 0 5px;
+  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
 }
 .cardgood__cont_amount {
   padding: 0 10px;
@@ -3054,6 +3143,7 @@ h3 {
   color: #1c1c1c;
   width: auto;
   border: 0;
+  background: transparent;
 }
 .cardgood__amount input::placeholder {
   font: 500 21.55px "Roboto",sans-serif;
@@ -3077,6 +3167,7 @@ h3 {
 }
 .cardgood .btn {
   width: 160px;
+  height: 36px;
 }
 
 .characteristic {
@@ -3194,7 +3285,160 @@ h3 {
   margin-bottom: 5px;
 }
 
+.filtertabinfo {
+  margin-bottom: 20px;
+  display: none;
+}
+
 /*Card goods page end*/
+/*Account page*/
+.account {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 40px;
+}
+.account__left {
+  width: 206px;
+}
+.account__right {
+  width: 660px;
+}
+.account__nav {
+  list-style: none;
+}
+.account__li {
+  display: flex;
+  width: 100%;
+  height: 34px;
+  border-radius: 3px;
+  justify-content: flex-start;
+  align-items: center;
+  background: #fff;
+  border-bottom: 1px solid #f6f6f6;
+  cursor: pointer;
+}
+.account__li:first-child {
+  border-top: 1px solid #f6f6f6;
+}
+.account__li a {
+  color: #3498db;
+  font: 400 16px "Roboto",sans-serif;
+}
+.account__li_active {
+  background: #1ea1f3;
+}
+.account__li_active a {
+  color: #fff;
+}
+.account__li_active .account__icon i {
+  color: #fff;
+}
+.account__icon {
+  width: 27px;
+  height: 100%;
+  margin-right: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.account__icon i {
+  color: #3498db;
+}
+.account__icon_1 i {
+  font-size: 16px;
+}
+.account__icon_2 i {
+  font-size: 14px;
+}
+.account__icon_3 i {
+  font-size: 12px;
+}
+.account__icon_4 i {
+  font-size: 14px;
+}
+.account__icon_5 i {
+  font-size: 14px;
+}
+.account__icon_6 i {
+  font-size: 16px;
+}
+.account__title {
+  font: 400 16px "Roboto",sans-serif;
+  color: #1c1c1c;
+  margin-bottom: 5px;
+}
+.account__input {
+  margin-bottom: 8px;
+  padding-top: 7px;
+  width: 201px;
+}
+.account__input_2 {
+  width: 235px;
+}
+.account__input label {
+  display: block;
+  font: 400 14px "Roboto",sans-serif;
+  color: #a4a4a4;
+  margin-bottom: 7px;
+}
+.account__input input {
+  height: 39px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #e5e5e5;
+  font: 400 14px "Roboto",sans-serif;
+  color: #1c1c1c;
+  padding: 0 15px;
+  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.account__input input::placeholder {
+  font: 400 14px "Roboto",sans-serif;
+  color: #a4a4a4;
+}
+
+.profile {
+  padding-top: 5px;
+}
+.profile__cont {
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 15px;
+}
+.profile__buttcont {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 15px;
+}
+.profile__left {
+  width: 150px;
+  margin-right: 20px;
+}
+.profile__right {
+  width: 470px;
+  padding-right: 20px;
+}
+.profile__img {
+  width: 143px;
+  height: 143px;
+  border-radius: 100%;
+  border: 1px solid #a5a5a5;
+  overflow: hidden;
+  text-align: center;
+}
+.profile__img img {
+  margin-top: -30px;
+  margin-left: -15px;
+}
+.profile__form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+/*Account page end*/
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   body {
     min-height: 100hv;
